--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.application.name=pp312
+spring.datasource.url=jdbc:mysql://localhost:3306/pp114?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
